--- a/sass/layout/_filter-btn.scss
+++ b/sass/layout/_filter-btn.scss
@@ -1,48 +1,51 @@
-.filter {
+.section-filter {
     padding-top: 94px;
     padding-bottom: 94px;
-
-    /*background-color: var(--primary-bc-color); */
 }
 
 .btn {
     display: flex;
     margin-bottom: 50px;
     justify-content: center;
-}
-.btn__item:not(:last-child) {
-    margin-right: 8px;
+
+    .current {
+        background-color: var(--accent-color);
+    }
+
+    &__item:not(:last-child) {
+        margin-right: 8px;
+    }
+
+    &__list {
+        display: block;
+        padding: 6px 22px;
+        border: none;
+        border-radius: 4px;
+    
+    font-family: inherit;    
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+        background-color: var(--team-bc-color);
+        color: var(--primary-text-color);
+        cursor: pointer;
+    
+        transition: color 250ms var(--timing-function),
+         background-color 250ms var(--timing-function),
+         box-shadow 250ms var(--timing-function);
+    }
+    &__list:hover,
+    &__list:focus {
+        box-shadow: 0px 2px 2px 0px #0000001F, 0px 1px 2px 0px #00000014,
+        0px 3px 1px 0px #0000001A;
+    
+        background-color: var(--accent-color);
+        color: var(--white-bc-color);
+    }
 }
 
-.btn__list {
-    display: block;
-    padding: 6px 22px;
-    border: none;
-    border-radius: 4px;
 
-font-family: inherit;    
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-text-align: center;
-letter-spacing: 0.03em;
 
-    background-color: var(--team-bc-color);
-    color: var(--primary-text-color);
-    cursor: pointer;
-
-    transition: color 250ms var(--timing-function),
-     background-color 250ms var(--timing-function),
-     box-shadow 250ms var(--timing-function);
-}
-.btn__list:hover,
-.btn__list:focus {
-    box-shadow: 0px 2px 2px 0px #0000001F, 0px 1px 2px 0px #00000014,
-    0px 3px 1px 0px #0000001A;
-
-    background-color: var(--accent-color);
-    color: var(--white-bc-color);
-}
-.btn__list.current {
-    background-color: var(--accent-color);
-}
