--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,48 +13,49 @@
         background-position: center;
         max-width: 1600px;
         margin: 0 auto;
-}
-.hero__title {
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
 
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-
-    color: var(--white-bc-color);
-}
-
-.hero__btn { 
-    width: 200px; 
-    height: 50px;
-    border: none;
-    border-radius: 4px;
-
-font-family: inherit; 
-font-style: normal; 
-font-weight: 700;  
-font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.06em;
-background-color: var(--accent-color);
-
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-
-color: var(--white-bc-color);
-cursor: pointer;
-
-transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
-}
-
-.hero__btn:hover,
-.hero__btn:focus {
-    background-color: #188ce8;
+        &__title {
+            font-weight: 900;
+            font-size: 44px;
+            line-height: 1.36;
+            text-align: center;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+            
+                max-width: 700px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 30px;
+            
+                color: var(--white-bc-color);
+            }
+            
+            &__btn { 
+                width: 200px; 
+                height: 50px;
+                border: none;
+                border-radius: 4px;
+            
+            font-family: inherit; 
+            font-style: normal; 
+            font-weight: 700;  
+            font-size: 16px;
+            line-height: 1.88;
+            letter-spacing: 0.06em;
+            background-color: var(--accent-color);
+            
+                display: block;
+                margin: 0 auto;
+                text-align: center;
+            
+            color: var(--white-bc-color);
+            cursor: pointer;
+            
+            transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
+            }
+            
+            &__btn:hover,
+            &__btn:focus {
+                background-color: #188ce8;
+            }
 }
