--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
-@import "./utils/vars";
+@import "./utils/variables";
 @import "./utils/hidden";
+
 
 @import "./base/reset";
 @import "./base/common";
