--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,9 @@
     --accent-color: #2196f3;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.start-page {
+    font-family: "Roboto", Tahoma, sans-serif;
+    background-color: var(--white-bc-color);
+    color: var(--primary-text-color);
+ }
