--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -9,10 +9,12 @@ background-color: #00000033;
 
 transition: opacity 250ms var(--timing-function),
 visibility 250ms var(--timing-function);
-}
 
-.backdrop.is-hidden .modal {
-    transform: scale(0.5);
+&.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    }
 }
 
 .modal {
@@ -32,37 +34,36 @@ transform: translate(-50%, -50%) scale(1);
 transition: transform 250ms var(--timing-function);
 
 background-color: var(--white-bc-color);
-}
 
-.modal-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    border: none;
+.backdrop.is-hidden & {
+    transform: scale(0.5);
+    }
+
+    &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: none;
+        
+        border-radius: 50%;
     
-    border-radius: 50%;
-
-    margin-top: 8px;
-    margin-right: 8px;
-
-    transition: background-color  250ms var(--timing-function);
-
-    background-color: #ffffff00;
-    fill: var(--primary-text-color);
-    transition: fill 250ms var(--timing-function);
+        margin-top: 8px;
+        margin-right: 8px;
+    
+        transition: background-color  250ms var(--timing-function);
+    
+        background-color: #ffffff00;
+        fill: var(--primary-text-color);
+        transition: fill 250ms var(--timing-function);
+    }
+    
+    &__close:hover {
+        fill: var(--accent-color);
+      }
 }
 
-.modal-btn:hover {
-    fill: var(--accent-color);
-  }
 
-.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
-
-.modal-tittle {
+.modal__tittle {
 
     width: 448px;
     font-weight: 700;
@@ -76,51 +77,45 @@ background-color: var(--white-bc-color);
     color: var(--primary-text-color); 
 }
 
-.modal-field {
+.field {
     margin-bottom: 10px;
 
+    &__label {
+
+        display: block;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+    
+        color: var(--secondary-text-color); 
+    }
+
+    &__wrap {
+        position: relative;
+    }
+
+    &__input {
+
+        width: 100%;
+        height: 40px;
+        border: 1px solid #21212133;
+        border-radius: 4px;
+    
+        margin-top: 4px;
+        padding-left: 42px;
+    
+        transition: border 250ms var(--timing-function);
+        color: var(--secondary-text-color);
+    }
+    
+    &__input:focus {
+        outline: none;
+        border: 1px solid #2196F3; 
+        fill: var(--accent-color)
+    }
 }
 
-.modal-comment-field {
-    margin-bottom: 20px;
-}
-
-.modal-label {
-
-    display: block;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-
-    color: var(--secondary-text-color); 
-}
-
-.modal-input {
-
-    width: 100%;
-    height: 40px;
-    border: 1px solid #21212133;
-    border-radius: 4px;
-
-    margin-top: 4px;
-    padding-left: 42px;
-
-    transition: border 250ms var(--timing-function);
-    color: var(--secondary-text-color);
-}
-
-.modal-input:focus {
-    outline: none;
-    border: 1px solid #2196F3; 
-    fill: var(--accent-color)
-}
-
-
-.modal-input-wrap {
-    position: relative;
-}
-
-.input-icon {
+.field__icon {
     position: absolute;
 
     left: 12px;
@@ -128,13 +123,18 @@ background-color: var(--white-bc-color);
         
 fill: var(--primary-text-color);
 transition: fill 250ms var(--timing-function);
+
+.field__input:focus + & {
+    fill: var(--accent-color)
+    } 
 }
 
-.modal-input:focus + .input-icon {
-    fill: var(--accent-color)
-} 
 
-.modal-comment {
+.field__comment {
+    margin-bottom: 20px;
+}
+
+.field__write {
 
     width: 100%;
     height: 120px;
@@ -152,24 +152,23 @@ transition: fill 250ms var(--timing-function);
 
     transition: border 250ms var(--timing-function);
     color: var(--secondary-text-color);
+
+    &:focus {
+        outline: none;
+        border: 1px solid var(--accent-color);
+      }
+    
+      &::placeholder {
+        color: #75757580;
+      }
 }
 
-.modal-comment:focus {
-    outline: none;
-    border: 1px solid var(--accent-color);
-  }
 
-  .modal-comment::placeholder {
-    color: #75757580;
-  }
-
-  .modal-checkbox-field {
+  .field__checkbox {
       margin-bottom: 30px;
   }
 
-  
-
-  .check-text {
+  .field__text {
     display: flex;
     align-items: center;
 
@@ -190,7 +189,7 @@ transition: fill 250ms var(--timing-function);
         border: 2px solid var(--primary-text-color);
         border-radius: 4px;
 
-        .input-check:checked + & {
+        .field__check:checked + & {
             border: none;
       
             background-image: url(../images/check.svg);
@@ -201,32 +200,32 @@ transition: fill 250ms var(--timing-function);
             border-color: var(--accent-color);
             background-color: var(--accent-color);
 
-            .input-check:focus + & {
+            .field__check:focus + & {
                 border-color: var(--accent-color);
               }
         }
     }
+
+    .field__link {
+        font-size: 14px;
+        line-height: 1.46;
+        letter-spacing: 0.03em;
+    
+        margin-left: 5px;
+    
+        color: var(--accent-color);
+        border-radius: 4px;
+        transition: box-shadow 250ms var(--timing-function);
+
+        &:focus {
+            outline: none;
+            box-shadow: 0 0 0 0.1em var(--accent-color);
+          }
+      }
   }
 
-  .checkbox-link {
-    font-size: 14px;
-    line-height: 1.46;
-    letter-spacing: 0.03em;
 
-    margin-left: 5px;
-
-    color: var(--accent-color);
-    border-radius: 4px;
-    transition: box-shadow 250ms var(--timing-function);
-  }
-
-  .checkbox-link:focus {
-    outline: none;
-    box-shadow: 0 0 0 0.1em var(--accent-color);
-  }
-
-
-.modal-submit-btn {
+.field__submit {
     position: absolute;
     width: 200px; 
     height: 50px;
@@ -247,10 +246,10 @@ background-color: var(--accent-color);
 transition: box-shadow 250ms var(--timing-function),
             background-color 250ms var(--timing-function);
 
+            &:focus {
+                outline: none;
+                background-color: #188ce8;
+                box-shadow: 0 0 0 0.2em #AFB1B8;
+            } 
 }
 
-.modal-submit-btn:focus {
-    outline: none;
-    background-color: #188ce8;
-    box-shadow: 0 0 0 0.2em #AFB1B8;
-} 
